--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\Anmol\Documents\Workspace\importanttask\ReportUsingITestResult.xml</span>
+                    <span>C:\Users\Anmol\Documents\EclipseWorkspace\importanttask\ReportUsingITestResult.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.kiwiqa.testreport.TestClass" class="method navigator-link" hash-for-method="loginVerify">loginVerify</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -123,7 +109,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.kiwiqa.testreport.TestClass" class="method navigator-link" hash-for-method="title">title</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.kiwiqa.testreport.TestClass" class="method navigator-link" hash-for-method="loginVerify">loginVerify</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -138,26 +124,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.kiwiqa.testreport.TestClass</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginVerify">
-                  </a> <!-- loginVerify -->
-                  <span class="method-name">loginVerify</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [https://opensource-demo.orangehrmlive.com/web/index.php/dashboard/index] but found [https://opensource-demo.orangehrmlive.com/web/index.php/auth/login]
-	at com.kiwiqa.testreport.TestClass.loginVerify(TestClass.java:59)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -173,9 +139,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="title">
-                  </a> <!-- title -->
-                  <span class="method-name">title</span>
+                  <a name="loginVerify">
+                  </a> <!-- loginVerify -->
+                  <span class="method-name">loginVerify</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -183,7 +149,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Anmol\Documents\Workspace\importanttask\ReportUsingITestResult.xml</span>
+            <span class="header-content">C:\Users\Anmol\Documents\EclipseWorkspace\importanttask\ReportUsingITestResult.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -232,19 +198,15 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'formReg')
 data.setCell(0, 2, 'com.kiwiqa.testreport.TestClass')
-data.setCell(0, 3, 45231);
+data.setCell(0, 3, 45473);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginVerify')
 data.setCell(1, 2, 'com.kiwiqa.testreport.TestClass')
-data.setCell(1, 3, 31451);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'title')
-data.setCell(2, 2, 'com.kiwiqa.testreport.TestClass')
-data.setCell(2, 3, 7493);
+data.setCell(1, 3, 33342);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -282,33 +244,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">formReg</span>
-                <span class="method-start">22027 ms</span>
+                <span class="method-start">12407 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod([TestResult name=formReg status=SUCCESS method=TestClass.formReg()[pri:0, instance:com.kiwiqa.testre...)</span>
-                <span class="method-start">67276 ms</span>
+                <span class="method-start">57888 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">loginVerify</span>
-                <span class="method-start">70019 ms</span>
+                <span class="method-start">60356 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=loginVerify status=FAILURE method=TestClass.loginVerify()[pri:0, instance:com.kiwiq...)</span>
-                <span class="method-start">101476 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">title</span>
-                <span class="method-start">103719 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=title status=SUCCESS method=TestClass.title()[pri:0, instance:com.kiwiqa.testreport...)</span>
-                <span class="method-start">111217 ms</span>
+                <span class="method-name">afterMethod([TestResult name=loginVerify status=SUCCESS method=TestClass.loginVerify()[pri:0, instance:com.kiwiq...)</span>
+                <span class="method-start">93703 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">afterclass</span>
-                <span class="method-start">113544 ms</span>
+                <span class="method-start">95966 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
